Feat/Style: update styling, make headers clickable, etc

--- a/styles.css
+++ b/styles.css
@@ -28,10 +28,34 @@ img {
 }
 
 .toggle-button {
-  border-radius: 10%;
+  background-color: black;
+  color: white;
+  border: 0;
   height: 30px;
 }
 
 .toggle-button-li {
   list-style-type: none;
+}
+
+.toggle-button-light {
+  background-color: white;
+  color: black;
+}
+
+.headers {
+  color: black;
+}
+
+.headers:hover {
+  color: black;
+}
+
+.footnotes {
+  display: flex;
+  justify-content: space-around;
+}
+
+.links {
+  margin: 7px;
 }
